--- a/index.html
+++ b/index.html
@@ -5,11 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reset.css">
+    <script src="https://kit.fontawesome.com/a6b8c9350b.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <link rel="shortcut icon" href="image/allPort.png" type="image/x-icon">
+    <title>dekstop1</title>
 </head>
 <body>
-    
+    <div class="conteiner">
+  <header>
+    <img src="image/allPort.png" alt="logo">
+    <nav class="nav1">
+        <ul class="headerul">
+            <li ><a class="headera news" href="index.html">news</a></li>
+            <li ><a class="headera" href="index.html">Services</a></li>
+            <li ><a class="headera" href="index.html">Who We Are</a></li>
+        </ul>
+    </nav>
+    <div class="divsearch"><i class="fa-solid fa-magnifying-glass search"></i></div>
+  </header>
+
+    </div>
 </body>
 </html>
