--- a/index.html
+++ b/index.html
@@ -24,7 +24,46 @@
     </nav>
     <div class="divsearch"><i class="fa-solid fa-magnifying-glass search"></i></div>
   </header>
+<section>
+  
+  <div class="cards">
+    <h1>Company News</h1>
+    <div class="div1">
+      <img class="cardsimg" src="image/Rectangle 10.png" alt="">
+      <p class="cardstext">Open the article and give it a quick read.</p>
 
     </div>
+    <div class="div1">
+      <img class="cardsimg" src="image/Rectangle 11.png" alt="">
+      <p class="cardstext">Open the article and give it a quick read.</p>
+    </div>
+    
+    <div class="div1">
+      <img class="cardsimg" src="image/Rectangle 12.png" alt="">
+      <p class="cardstext">Open the article and give it a quick read.</p>
+    </div>
+    
+    <div class="div1">
+      <img class="cardsimg" src="image/Rectangle 13.png" alt="">
+      <p class="cardstext">Open the article and give it a quick read.</p>
+
+    </div>
+    <div class="div1">
+      <img class="cardsimg" src="image/Rectangle 14.png" alt="">
+      <p class="cardstext">Open the article and give it a quick read.</p>
+    </div>
+
+    <div class="div1">
+      <img class="cardsimg" src="image/Rectangle 15.png" alt="">
+      <p class="cardstext">Open the article and give it a quick read.</p>
+    </div>
+  </div>
+</section>
+<footer>
+
+</footer>
+
+    </div>
+
 </body>
 </html>
