--- a/index.html
+++ b/index.html
@@ -60,7 +60,60 @@
   </div>
 </section>
 <footer>
+<div class="footerdiv">
+  <div class="footerdiv1 icon ">
+    <h2>Contact info</h2>
+    <a  class="maili" href="mailto:info@allPort.com">info@allPort.com</a>
+    
+    <i class="fa-brands fa-facebook facebook"></i>
+    <i class="fa-brands fa-facebook facebook"></i>
+    <i class="fa-brands fa-facebook facebook"></i>
+    <i class="fa-brands fa-facebook facebook"></i>
+  </div>
 
+<div class="footerdiv1 footer_2">
+  <h2>Trending</h2>
+  <p class="ft_text" >Installments</p>
+  <p class="ft_text" >Electronics</p>
+  <p class="ft_text" >Grocery</p>
+  <p class="ft_text"  >Home Appliances
+</p>
+  <p class="ft_text" >Mobile Accessories</p>
+</div>
+
+<div class="footerdiv1 footer_2">
+  <h2>Information</h2>
+  <p class="ft_text">About Us
+</p>
+  <p class="ft_text">Contact Us
+</p>
+  <p class="ft_text">FAQs</p>
+  <p class="ft_text">Shipping & Return
+</p>
+  <p class="ft_text">Privacy policy
+
+</p>
+  <p class="ft_text">Terms & Conditions</p>
+</div>
+
+<div class="footerdiv1 footer_2">
+  <h2>Customer Care</h2>
+  <p  class="ft_text">My Account
+
+</p>
+  <p  class="ft_text">Track Your Order
+</p>
+  <p  class="ft_text">Recently Viewed
+</p>
+  <p class="ft_text">Recently Viewed
+</p>
+  <p class="ft_text">Recently Viewed
+</p>
+  <p class="ft_text">Recently Viewed
+</p>
+</div>
+
+</div>
 </footer>
 
     </div>
